# tuot

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/assets/: susanne.mtl
app/src/: main.rs  maina.rs
src/: aabb.rs  bvh.rs  camera.rs  color.rs  disc.rs  examples.rs  hitable.rs  lib.rs  material.rs  ray.rs  rect.rs  render_error.rs  renderer.rs  scene.rs  sdf.rs  sdfa.rs  setup.rs  sphere.rs  texture.rs  triangle.rs  utils.rs
src/camera_effects/: camera_distorter.rs  camera_distorter_opt.rs  mod.rs
src/montecarlo_pimped/: deflection_opt.rs  material.rs  mod.rs  renderer.rs  tint_opt.rs
src/texture/: bitmap.rs  checker.rs  constant_color.rs  noise.rs  perlin.rs
